:meat_on_bone: Overcame some obstacles: namespacing the new SVG elements seems to have done the trick. some issues w/ imports also fixed

--- a/app/base.scss
+++ b/app/base.scss
@@ -1,5 +1,10 @@
 // colors
+$dark-blue: hsla(244, 88%, 52%, 0.59);
+$bright-green: hsl(138, 100%, 50%);
+$purple-purple: hsla(288, 100%, 50%, 0.671);
+$pink: hsla(288, 100%, 50%, 0.671);
 
+// Main Rules
 :root {
   font-family: monospace;
   font-size: 16px;
@@ -10,43 +15,44 @@ html {
 }
 
 .primary-container {
-  background-color: hsla(244, 88%, 52%, 0.59);
+  background-color: $dark-blue;
   height: 90vh;
   margin: 1ex;
   overflow: scroll;
   position: relative;
 
   &__firstImage {
-    clip-path: url(#clippingPath);
+    clip-path: url('#clippingPath');
     height: 100%;
     left: 0;
     position: absolute;
-    width: 100%;
     top: 50%;
+    width: 100%;
   }
 
   &__bigWord {
     // this is an image w/ an svg clip path applied to it
-    clip-path: url(#textClipper);
-    color: hsl(138, 100%, 50%);
+    clip-path: url('#textClipper');
+    color: $bright-green;
     position: absolute;
-    width: 100%;
     top: 0;
+    width: 100%;
   }
 
   &__bigShape {
-    fill: hsla(288, 100%, 50%, 0.671);
+    color: $purple-purple;
+    fill: currentColor;
     left: 10vw;
     position: absolute;
     top: 30vh;
   }
 
   &__coverCircles {
-    color: hsl(330, 100%, 54%);
+    color: $pink;
     fill: currentColor;
+    height: 100%;
     opacity: 0.5;
     width: 100%;
-    height: 100%;
   }
 }
 
@@ -54,20 +60,20 @@ html {
 
 .text-clipper {
   font: bold 22rem/1.5 sans-serif;
+  left: 3rem;
   position: absolute;
   top: 3.1rem;
-  left: 3rem;
 }
 
 .svg-test {
-  width: 100%;
   height: 500px;
+  width: 100%;
 }
 
-.svgOverlay {
-  // background-color: hsla(310, 100%, 65%, 0.6);
-  // fill: currentColor;
-  // filter: opacity(0.67);
-  // display: none;
-  // position: absolute;
-}
+// .svgOverlay {
+//   // background-color: hsla(310, 100%, 65%, 0.6);
+//   // fill: currentColor;
+//   // filter: opacity(0.67);
+//   // display: none;
+//   // position: absolute;
+// }
